Fixed hero spacing for smaller screens

--- a/main.css
+++ b/main.css
@@ -136,6 +136,12 @@ footer {
     text-align: center;
 }
 
+@media screen and (max-height: 360px) {
+    .view-projects {
+       margin-top: 22px; 
+    }
+}
+
 @media screen and (min-width: 420px) {
     h1 {
         text-align: left;
@@ -151,7 +157,7 @@ footer {
     }
 }
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 740px) {
     .traits {
         font-size: 70px;
     }
